samples/_failures_safe/1761487462_1c12a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f11b79b.c: In function ‘main’:
./samples/SAFE/__tmp_1f11b79b.c:170:26: error: expected ‘)’ at end of input
  170 |     if (len > 0 && buffer
      |        ~                 ^
      |                          )
./samples/SAFE/__tmp_1f11b79b.c:170:5: error: expected declaration or statement at end of input
  170 |     if (len > 0 && buffer
      |     ^~
